ombrelloni/static/css/bagni.css
html{
  height: 100%;
}

body {
  height: 100%;
  /*padding-top: 70px;*/
  /*padding-bottom: 20px;*/
  /*background-color: #393C41;*/
  background: url(/static/img/ricepaper.png) repeat 0 0;
}

.homepage-body-class{
  height: 100%;
  /*padding-top: 70px;*/
  /*padding-bottom: 20px;*/
  /*background-color: #393C41;*/
  background: none;
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto;
  /* Negative indent footer by its height */
  margin: 0 auto -40px;
  /* Pad bottom by footer height */
  padding: 0 0 40px;
}

/* Set the fixed height of the footer here */
#footer {
  height: 40px;
  padding-top: 10px
}

#footer.hp-footer p
{
    color: #ffffff;
}

/* Move down content because we have a fixed navbar that is 70px tall */
#wrap > .container {
  padding-top: 70px;
}

.centered-text {
  text-align: center;
}

.homepage-first-row {
  margin-top: 130px;
}

.search-button {
  /*background-color: #0097D5;
  border-color: #0097D5;*/
  /*border-color: rgb(22, 137, 199);
  border: 1px solid rgb(16, 111, 169);
  background-color: rgb(39, 184, 246);
  background-image: linear-gradient(rgb(39, 184, 246), rgb(34, 161, 231));*/
}

#signup_form #id_email{

}

.homepage-box-wrapper {
  background: none repeat scroll 0% 0% rgba(57, 60, 61, 0.8);
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
  border-radius: 4px 4px 4px 4px;
}

.homepage-form {
  margin-bottom: 20px;
  padding-left: 0px;
  padding-right: 0px;
}

.homepage-input-div{
  padding-left: 0px;
  padding-right: 5px;
  margin-top: 5px;
}

.homepage-input{
  /*margin-top: 5px;*/
  border-top-left-radius: 6px !important;
  border-bottom-left-radius: 6px !important;
}

.homepage-headline {
  font-weight: 700;
  /*color: #F9BF16;*/
  color: rgb(255, 255, 255);
  margin-bottom: 10px;
}

.homepage-sub-headline {
  font-size: 120%;
  color: #F9BF16 /*rgb(249, 191, 22)*/;
  margin-bottom: 5px;
}

.border-right-2 {
  border-right: 1px solid rgb(226, 226, 226);
}

.text-underlined{
    text-decoration:underline;
}

.text-capitalized{
    text-transform:capitalize;
}

.result-wrapper-div {
  border: 1px solid rgb(226, 226, 226);
  /*rgb(226, 226, 226);*/
  padding-top: 15px;
  border-radius: 4px 4px 4px 4px;
  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
  background-color: rgb(255,255,255);
  margin-left: 0px;
  margin-right: 0px;
}

.single-result-header{
    font-weight: 700;
}

.single-result-address{
    margin-bottom: 20px;
}

.filter-result-header {
    margin-bottom: 20px;
    margin-top: 0px;
    font-weight: 700;
}


.filter-result-header-tab {
    margin-bottom: 20px;
    margin-top: 15px;
    font-weight: 700;
}

.filter-result-service-category {
     cursor:pointer;
     color: #6A4A3C;
     background-color:#FFF6DF;
}

.filter-result-service-category:hover {
     color:rgb(249, 191, 22);
}

#filters, #filterTab {
  border: 1px solid rgb(249, 191, 22);
  padding: 19px 19px 19px;
  border-radius: 4px 4px 4px 4px;
}


.single-bagno-result-box {
  background-color: rgb(247, 247, 247);
  padding: 0px 15px 0px 15px;
}

#filters label, #filterTab label{
    color: rgb(42, 100, 150);
}

.bagno-detail-wrapper-div{
    border: 1px solid rgb(226, 226, 226);
    border-radius: 4px 4px 4px 4px;
    background-color: rgb(255,255,255);
    padding: 0px 15px 0px 15px;
    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
}

.no-images-wrapper-div{
    position:relative;
    margin-bottom: 10px;
}

.image-carousel-div{
    margin-bottom: 10px;
}

.no-images-text{
    top: 10%;
    left: 5%;
    position: absolute;
}

.my-bold{
    font-weight: 700;
}

.bagno-detail-header{
    font-weight: 700;
}

.bagno-detail-address{

}

.bagno-detail-sub-header{
    border-bottom: 1px solid rgb(249, 191, 22);
    padding-bottom: 5px;
    margin-top: 10px;
}

.book-button{
    margin-top: 20px;
    color: rgb(255, 255, 255);
    background-color: rgb(37, 139, 228);
    border-color: rgb(37, 139, 228);
}


.book-button:hover{
    color: rgb(255, 255, 255);
    background-color: rgb(50, 118, 177);
    border-color: rgb(40, 94, 142);
}


.book-button:visited{
    color: rgb(255, 255, 255);
    background-color: rgb(37, 139, 228);
    border-color: rgb(37, 139, 228);
}


.book-button:focus{
    color: rgb(255, 255, 255);
    background-color: rgb(50, 118, 177);
    border-color: rgb(40, 94, 142);
}

.book-button-xs{
    margin-bottom: 10px;
    color: rgb(255, 255, 255);
    background-color: rgb(37, 139, 228);
    border-color: rgb(37, 139, 228);
}


.book-button-xs:hover{
    color: rgb(255, 255, 255);
    background-color: rgb(50, 118, 177);
    border-color: rgb(40, 94, 142);
}


.book-button-xs:visited{
    color: rgb(255, 255, 255);
    background-color: rgb(37, 139, 228);
    border-color: rgb(37, 139, 228);
}


.book-button-xs:focus{
    color: rgb(255, 255, 255);
    background-color: rgb(50, 118, 177);
    border-color: rgb(40, 94, 142);
}

.bagno-header-row{
    border-bottom: 1px solid rgb(249, 191, 22);
    margin-bottom: 8px;
}

.bagno-edit-img
{
    margin-bottom: 10px;
}

.hp-form
{
    text-align:  center;
    position: relative;
    top: 100px;
}
img.hp-form-image
{
    width: 100%;
    display: inline-block;

}
.hp-content
{
    margin: 20px auto;
    width: 90%;
}

#messages
{
    margin-top: 20px
}

.search
{
    margin-top: 20px;
}
.per-page
{
    float: right;
}
.hits-count
{
    font-weight: bold;
}
.hits-query
{
    font-style: italic;
}
.services li
{
    display: inline;
    float: left;
}

.display-inline{
    display: inline-block;
}

.search-page-label{
    padding-left: 15px;
}

.search-page-button{
    /*background-color: #0097D5;
    border-color: #0097D5;*/
    /*border: 1px solid rgb(16, 111, 169);
    background-color: rgb(39, 184, 246);
    background-image: linear-gradient(rgb(39, 184, 246), rgb(34, 161, 231));*/
}

.search-page-search-row{
    position: relative;
}

.search-page-search-row-wrapper-div{
    border: 1px solid rgb(249, 191, 22);
    /*rgb(226, 226, 226)*/
    padding-bottom: 20px;
    padding-right: 15px;
    padding-left: 15px;
    margin-bottom: 15px;
    margin-top: 10px;
    margin-left: 0px;
    margin-right: 0px;
    border-radius: 4px 4px 4px 4px;
    background-color: rgb(249, 191, 22);/*rgb(249, 191, 22);*/
    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
}


.search-page-search-button-div{
    position: absolute; bottom: 0; left: 83%;
}


.service-glyphicon{
    color: green;
}

.full-width{
    width: 100%;
}

.modal-wheel {
    display:    none;
    position:   fixed;
    z-index:    1000;
    top:        0;
    left:       0;
    height:     100%;
    width:      100%;
    background: rgba( 255, 255, 255, .8 )
                url('/static/img/spinning-wheel.gif?v=4')
                50% 50%
                no-repeat;
}

.loading {
    overflow: hidden;
}

/* Anytime the body has the loading class, our
   modal element will be visible */
.loading .modal-wheel {
    display: block;
}


.my-yellow{
    background-color: rgb(249, 191, 22);
    border-color: rgb(249, 191, 22);
}

.my-red{
    color: #EB604B;
}


.search-result-separator{
    background-color: rgb(249, 191, 22);
    border-color: rgb(249, 191, 22);
    margin-top: 10px;
    margin-bottom: 10px;
}

.my-grey{
    color: rgb(96, 96, 96);
}



.hp-facility-btn{
    background-color: rgb(240, 240, 240);
}

.hp-facility-btn:hover {
    background-color: rgb(210, 210, 210);
}


.my-brown{
    color: #6A4A3C;
}

h1, h2, h3, h4 {
    font-family: 'homizio-regular', sans-serif;
    color: #6A4A3C;
    letter-spacing: 2px;
}

p {
    font-family: Helvetica Neue, sans-serif;
    color: rgb(96, 96, 96);
}

label {
    font-family: Helvetica Neue, sans-serif;
}

li {
    font-family: Helvetica Neue, sans-serif;
}

span {
    font-family: Helvetica Neue, sans-serif;
    color: rgb(102, 102, 102);
}

a {
    /*font-family: 'Droid Sans', sans-serif;*/
    color: #0097D5;
}

button {
    font-family: Helvetica Neue, sans-serif;
}

.navbar-default{
    background-color: #EB604B;
    height: 70px;
    padding: 10px 0px;
}

.homepage-body-class .navbar-default{
    background-color: #F9BF16;
    border-color: #F9BF16;
}

.navbar-default .navbar-nav > li > a {
    color: rgb(255, 255, 255);
}
.navbar-default .navbar-brand{
  padding-top: 0px;
}

.navbar-default .navbar-brand .homizio-black {
    color: rgb(255, 255, 255);
    font-family: 'homizio-black', Helvetica Neue, sans-serif;
    text-transform: uppercase;
}

.navbar-default .navbar-brand .homizio-thin {
  color: rgb(255, 255, 255);
  font-family: 'homizio-thin', Helvetica Neue, sans-serif;
  text-transform: lowercase;
  position: relative;
  top: 4px;
}

.navbar-default .navbar-brand:hover > .homizio {
  color: #F9BF16;
}

.homepage-body-class .navbar-default .navbar-brand:hover > .homizio {
  color: #EB604B;
}


#.navbar-default .navbar-brand img{
#  height: 40px;
#}

.btn-primary {
     background-color: #EB604B/*#00A0B0*/;
     border-color: #EB604B/*#00A0B0*/;
}

.btn-primary:hover {
     background-color: #EB351A/*#00A0B0*/;
     border-color: #EB351A/*#00A0B0*/;
}

.btn-primary:focus {
     background-color: #EB351A/*#00A0B0*/;
     border-color: #EB351A/*#00A0B0*/;
}

.btn-primary:visited {
     background-color: #EB351A/*#00A0B0*/;
     border-color: #EB351A/*#00A0B0*/;
}

.hp-what-input {
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
}

.hp-facility-modal {
   border: 3px solid #6A4A3C;
}

.modal-category-name{
    background-color: #F9BF16;
    padding: 1px 0px 3px 1px;
}

.modal-category-name:hover{
    cursor:pointer;
}


.modal-category-name-col{
    padding-left: 14px;
}

.modal-facility-row{
    padding-bottom: 10px;
}

.facility-categoty-arrow{
    margin-right: 2px;
    top: 2px;
    color: #6A4A3C;
}

.facility_list{
    padding-top: 50px;
}

/* css class set by django on the form errors */
.errorlist{
    padding-left: 0px;
    list-style: none outside none;
    color: red;
}

/*.btn-primary {
     background-color: hsl(201, 87%, 32%) !important; background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1aa4ef", endColorstr="#0a6698");
     background-image: -khtml-gradient(linear, left top, left bottom, from(#0a6698), to(#1aa4ef));
     background-image: -moz-linear-gradient(top, #0a6698, #1aa4ef);
     background-image: -ms-linear-gradient(top, #0a6698, #1aa4ef);
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1aa4ef), color-stop(100%, ##1aa4ef));
     background-image: -webkit-linear-gradient(top, #0a6698, #1aa4ef);
     background-image: -o-linear-gradient(top, #1aa4ef, #0a6698);
     background-image: linear-gradient(#1aa4ef, #0a6698);
     border-color: #0a6698 #0a6698 hsl(201, 87%, 27%); color: #fff !important;
}*/

